table align fix

--- a/style.css
+++ b/style.css
@@ -62,9 +62,11 @@ body {
   table {
     border-collapse: collapse;
     border-spacing: 0;
-    width: 300px;
+    margin: 0;
+    width: 100%;
     background-color: #F9D77F;
-     font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+
   }
   
   td, th {
@@ -73,14 +75,15 @@ body {
   
 
   #square, #square2 {
+    display: flex;
     padding: 25px;
     border: 100px;
     border-color:black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 320px;
-    align-self: flex-start; 
+    align-content: center;
+    width: 320px; 
     
   }
 
